2010-05-28	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-rtems.c: Use size_t for node_len.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/gethostnamadr.c:
	Try to make crazy address arithmetic more portable.
	* libfs/src/nfsclient/src/xdr_mbuf.c:
	Use void* arithmetic instead of u_long arithmetic.
	* libnetworking/netinet/raw_ip.c,
	libnetworking/netinet/udp_usrreq.c:
	Cast mbufs to uintptr_t instead of u_long.
	* libnetworking/rtems/rtems_mii_ioctl.h, 
	libnetworking/rtems/rtems_mii_ioctl_kern.c:
	Use uint32_t instead of int as ioctl cmd arg.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	*  libnetworking/lib/ftpfs.c, libnetworking/lib/tftpDriver.c:
	Use size_t instead of int for pathnamelen.
	* libfs/src/rfs/rtems-rfs-rtems.c:
	Use size_t instead of int for pathlen.
	Use %zi to print pathlen.
	* libcsupport/include/rtems/libio.h:
	Use size_t instead of int for pathnamelen.
	* libcsupport/include/rtems/libio_.h, libcsupport/src/eval.c:
	Use size_t instead of int for pathnamelen.
	* libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_eval.c:
	Use size_t instead of int for pathnamelen.
	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_eval.c:
	Use size_t instead of int for pathnamelen.
	* libfs/src/devfs/devfs.h, libfs/src/devfs/devfs_eval.c:
	Use size_t instead of int for pathnamelen.
	* libfs/src/nfsclient/src/nfs.c: 
	Use uint32_t instead of u_int_t for readarg and writearg.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/nfs.c: Introduce union nfs_evalpath_arg.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_tcp.c, librpc/src/rpc/clnt_udp.c:
	Revert to using u_long instead of rpcprog_t, rpcvers_t 
	to stay bug-ward compatible to freebsd.
	* librpc/src/xdr/xdr_mem.c: Cosmetics from freebsd.

2010-05-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/rpcio.c: 
	Cast pointers to uintptr_t instead of long.